--- a/campaigns-dapp/package.json
+++ b/campaigns-dapp/package.json
@@ -3,26 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/inter": "^5.0.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bip39": "^3.1.0",
-    "ethereumjs-wallet": "^1.0.2",
+    "assert": "^2.1.0",
+    "crypto-browserify": "^3.12.0",
+    "framer-motion": "^11.2.12",
     "fs-extra": "^11.2.0",
     "ganache-cli": "^6.12.2",
-    "mocha": "^10.5.1",
+    "https-browserify": "^1.0.0",
+    "mocha": "^10.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.5",
     "solc": "^0.4.26",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "truffle-hdwallet-provider": "^1.0.17",
+    "url": "^0.11.3",
     "web-vitals": "^2.1.4",
     "web3": "^1.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "mocha --timeout 10000 --exit ./src/ethereum/test/*.js",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
