--- a/campaigns-dapp/package.json
+++ b/campaigns-dapp/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "assert": "^2.1.0",
     "crypto-browserify": "^3.12.0",
+    "formik": "^2.4.6",
     "framer-motion": "^11.2.12",
     "fs-extra": "^11.2.0",
     "ganache-cli": "^6.12.2",
