--- a/campaigns-dapp/package.json
+++ b/campaigns-dapp/package.json
@@ -12,7 +12,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "assert": "^2.1.0",
+    "bip39": "^3.1.0",
     "crypto-browserify": "^3.12.0",
+    "ethereumjs-wallet": "^1.0.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.2.12",
     "fs-extra": "^11.2.0",
@@ -36,7 +38,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "mocha --timeout 10000 --exit ./src/ethereum/test/*.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
